index.html changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,19 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Handexa - Find informal jobs in Kenya, including tailoring, carpentry, food vending, and more. Connect with local opportunities today!" />
-    <meta name="keywords" content="informal jobs, Kenya jobs, tailoring jobs, carpentry jobs, food vending, Handexa" />
-    <meta name="author" content="Handexa Team" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Handexa - Kenya’s Informal Job Platform" />
-    <meta property="og:description" content="Join Handexa to find or post informal jobs like tailoring, carpentry, and food vending in Kenya." />
-    <meta property="og:image" content="/images/handexa-og-image.jpg" />
-    <meta property="og:url" content="https://handexa.ke" />
-    <meta property="og:type" content="website" />
-    <title>Handexa - Kenya’s Informal Job Platform</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Handexa </title>
   </head>
   <body>
     <div id="root"></div>
